src/parser.output
Nonterminals useless in grammar

    or_expression
    identifier_list


Rules useless in grammar

  209 identifier_list: IDENTIFIER
  210                | identifier_list ',' IDENTIFIER


State 54 conflicts: 1 shift/reduce
State 221 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce
State 292 conflicts: 1 shift/reduce
State 323 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 primary_expression: IDENTIFIER
    2                   | NUMBER
    3                   | FLOAT_NUMBER
    4                   | STRING_LITERAL
    5                   | '(' expression ')'

    6 postfix_expression: primary_expression
    7                   | postfix_expression '[' expression ']'
    8                   | postfix_expression '(' ')'
    9                   | postfix_expression '(' argument_expression_list ')'
   10                   | postfix_expression '.' IDENTIFIER
   11                   | postfix_expression PTR_OP IDENTIFIER
   12                   | postfix_expression INC_OP
   13                   | postfix_expression DEC_OP

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list ',' assignment_expression

   16 unary_expression: postfix_expression
   17                 | INC_OP unary_expression
   18                 | DEC_OP unary_expression
   19                 | unary_operator cast_expression
   20                 | SIZEOF unary_expression
   21                 | SIZEOF '(' type_name ')'

   22 unary_operator: '&'
   23               | '*'
   24               | '+'
   25               | '-'
   26               | '~'
   27               | '!'

   28 cast_expression: unary_expression
   29                | '(' type_name ')' cast_expression

   30 multiplicative_expression: cast_expression
   31                          | multiplicative_expression '*' cast_expression
   32                          | multiplicative_expression '/' cast_expression
   33                          | multiplicative_expression '%' cast_expression

   34 additive_expression: multiplicative_expression
   35                    | additive_expression '+' multiplicative_expression
   36                    | additive_expression '-' multiplicative_expression

   37 shift_expression: additive_expression
   38                 | shift_expression LEFT_OP additive_expression
   39                 | shift_expression RIGHT_OP additive_expression

   40 relational_expression: shift_expression
   41                      | relational_expression '<' shift_expression
   42                      | relational_expression '>' shift_expression
   43                      | relational_expression LE_OP shift_expression
   44                      | relational_expression GE_OP shift_expression

   45 equality_expression: relational_expression
   46                    | equality_expression EQ_OP relational_expression
   47                    | equality_expression NE_OP relational_expression

   48 and_expression: equality_expression
   49               | and_expression '&' equality_expression

   50 exclusive_or_expression: and_expression
   51                        | exclusive_or_expression '^' and_expression

   52 inclusive_or_expression: exclusive_or_expression
   53                        | inclusive_or_expression '|' exclusive_or_expression

   54 logical_and_expression: inclusive_or_expression
   55                       | logical_and_expression AND_OP inclusive_or_expression

   56 logical_or_expression: logical_and_expression
   57                      | logical_or_expression OR_OP logical_and_expression

   58 conditional_expression: logical_or_expression
   59                       | logical_or_expression '?' expression ':' conditional_expression

   60 assignment_expression: conditional_expression
   61                      | unary_expression assignment_operator assignment_expression

   62 assignment_operator: '='
   63                    | MUL_ASSIGN
   64                    | DIV_ASSIGN
   65                    | MOD_ASSIGN
   66                    | ADD_ASSIGN
   67                    | SUB_ASSIGN
   68                    | LEFT_ASSIGN
   69                    | RIGHT_ASSIGN
   70                    | AND_ASSIGN
   71                    | XOR_ASSIGN
   72                    | OR_ASSIGN

   73 expression: assignment_expression
   74           | expression ',' assignment_expression

   75 constant_expression: conditional_expression

   76 declaration: declaration_specifiers ';'
   77            | declaration_specifiers init_declarator_list ';'

   78 declaration_specifiers: storage_class_specifier
   79                       | storage_class_specifier declaration_specifiers
   80                       | type_specifier
   81                       | type_specifier declaration_specifiers
   82                       | type_qualifier
   83                       | type_qualifier declaration_specifiers

   84 init_declarator_list: init_declarator
   85                     | init_declarator_list ',' init_declarator

   86 init_declarator: declarator
   87                | declarator '=' initializer

   88 storage_class_specifier: TYPEDEF
   89                        | EXTERN
   90                        | STATIC
   91                        | AUTO
   92                        | REGISTER

   93 type_specifier: VOID
   94               | CHAR
   95               | SHORT
   96               | INT
   97               | LONG
   98               | FLOAT
   99               | DOUBLE
  100               | SIGNED
  101               | UNSIGNED
  102               | struct_or_union_specifier
  103               | enum_specifier
  104               | TYPE_NAME

  105 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  106                          | struct_or_union '{' struct_declaration_list '}'
  107                          | struct_or_union IDENTIFIER

  108 struct_or_union: STRUCT
  109                | UNION

  110 struct_declaration_list: struct_declaration
  111                        | struct_declaration_list struct_declaration

  112 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list
  114                         | type_specifier
  115                         | type_qualifier specifier_qualifier_list
  116                         | type_qualifier

  117 struct_declarator_list: struct_declarator
  118                       | struct_declarator_list ',' struct_declarator

  119 struct_declarator: declarator
  120                  | ':' constant_expression
  121                  | declarator ':' constant_expression

  122 enum_specifier: ENUM '{' enumerator_list '}'
  123               | ENUM IDENTIFIER '{' enumerator_list '}'
  124               | ENUM IDENTIFIER

  125 enumerator_list: enumerator
  126                | enumerator_list ',' enumerator

  127 enumerator: IDENTIFIER
  128           | IDENTIFIER '=' constant_expression

  129 type_qualifier: CONST
  130               | VOLATILE

  131 declarator: direct_declarator

  132 direct_declarator: IDENTIFIER
  133                  | '(' declarator ')'
  134                  | direct_declarator '(' ')'
  135                  | direct_declarator '(' parameter_type_list ')'

  136 pointer: '*'
  137        | '*' type_qualifier_list
  138        | '*' pointer
  139        | '*' type_qualifier_list pointer

  140 type_qualifier_list: type_qualifier
  141                    | type_qualifier_list type_qualifier

  142 parameter_type_list: parameter_list
  143                    | parameter_list ',' ELLIPSIS

  144 parameter_list: parameter_declaration
  145               | parameter_list ',' parameter_declaration

  146 parameter_declaration: %empty
  147                      | declaration_specifiers declarator
  148                      | declaration_specifiers abstract_declarator
  149                      | declaration_specifiers

  150 type_name: specifier_qualifier_list
  151          | specifier_qualifier_list abstract_declarator

  152 abstract_declarator: pointer
  153                    | direct_abstract_declarator
  154                    | pointer direct_abstract_declarator

  155 direct_abstract_declarator: '(' abstract_declarator ')'
  156                           | '[' ']'
  157                           | '[' constant_expression ']'
  158                           | direct_abstract_declarator '[' ']'
  159                           | direct_abstract_declarator '[' constant_expression ']'
  160                           | '(' ')'
  161                           | '(' parameter_type_list ')'
  162                           | direct_abstract_declarator '(' ')'
  163                           | direct_abstract_declarator '(' parameter_type_list ')'

  164 initializer: assignment_expression
  165            | '{' initializer_list '}'
  166            | '{' initializer_list ',' '}'

  167 initializer_list: initializer
  168                 | initializer_list ',' initializer

  169 statement: labeled_statement
  170          | compound_statement
  171          | expression_statement
  172          | selection_statement
  173          | iteration_statement
  174          | jump_statement

  175 labeled_statement: IDENTIFIER ':' statement
  176                  | CASE constant_expression ':' statement
  177                  | DEFAULT ':' statement

  178 compound_statement: '{' '}'
  179                   | '{' statement_list '}'
  180                   | '{' declaration_list '}'
  181                   | '{' declaration_list statement_list '}'

  182 declaration_list: declaration
  183                 | declaration_list declaration

  184 statement_list: statement
  185               | statement_list statement

  186 expression_statement: ';'
  187                     | expression ';'

  188 selection_statement: IF '(' expression ')' statement
  189                    | IF '(' expression ')' statement ELSE statement
  190                    | SWITCH '(' expression ')' statement

  191 iteration_statement: WHILE '(' expression ')' statement
  192                    | DO statement WHILE '(' expression ')' ';'
  193                    | FOR '(' expression_statement expression_statement ')' statement
  194                    | FOR '(' expression_statement expression_statement expression ')' statement

  195 jump_statement: GOTO IDENTIFIER ';'
  196               | CONTINUE ';'
  197               | BREAK ';'
  198               | RETURN ';'
  199               | RETURN expression ';'

  200 translation_unit: external_declaration
  201                 | translation_unit external_declaration

  202 external_declaration: function_definition
  203                     | declaration

  204 function_definition: declaration_specifiers declarator declaration_list compound_statement
  205                    | declaration_specifiers declarator compound_statement
  206                    | declarator declaration_list compound_statement
  207                    | declarator compound_statement

  208 program: translation_unit


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 27
    '%' (37) 33
    '&' (38) 22 49
    '(' (40) 5 8 9 21 29 133 134 135 155 160 161 162 163 188 189 190 191 192 193 194
    ')' (41) 5 8 9 21 29 133 134 135 155 160 161 162 163 188 189 190 191 192 193 194
    '*' (42) 23 31 136 137 138 139
    '+' (43) 24 35
    ',' (44) 15 74 85 118 126 143 145 166 168
    '-' (45) 25 36
    '.' (46) 10
    '/' (47) 32
    ':' (58) 59 120 121 175 176 177
    ';' (59) 76 77 112 186 187 192 195 196 197 198 199
    '<' (60) 41
    '=' (61) 62 87 128
    '>' (62) 42
    '?' (63) 59
    '[' (91) 7 156 157 158 159
    ']' (93) 7 156 157 158 159
    '^' (94) 51
    '{' (123) 105 106 122 123 165 166 178 179 180 181
    '|' (124) 53
    '}' (125) 105 106 122 123 165 166 178 179 180 181
    '~' (126) 26
    error (256)
    IDENTIFIER <string> (258) 1 10 11 105 107 123 124 127 128 132 175 195
    NUMBER <number> (259) 2
    FLOAT_NUMBER <numberFloat> (260) 3
    STRING_LITERAL (261) 4
    SIZEOF (262) 20 21
    PTR_OP (263) 11
    INC_OP (264) 12 17
    DEC_OP (265) 13 18
    LEFT_OP (266) 38
    RIGHT_OP (267) 39
    LE_OP (268) 43
    GE_OP (269) 44
    EQ_OP (270) 46
    NE_OP (271) 47
    AND_OP (272) 55
    OR_OP (273) 57
    MUL_ASSIGN (274) 63
    DIV_ASSIGN (275) 64
    MOD_ASSIGN (276) 65
    ADD_ASSIGN (277) 66
    SUB_ASSIGN (278) 67
    LEFT_ASSIGN (279) 68
    RIGHT_ASSIGN (280) 69
    AND_ASSIGN (281) 70
    XOR_ASSIGN (282) 71
    OR_ASSIGN (283) 72
    TYPE_NAME (284) 104
    TYPEDEF (285) 88
    EXTERN (286) 89
    STATIC (287) 90
    AUTO (288) 91
    REGISTER (289) 92
    CHAR (290) 94
    SHORT (291) 95
    INT (292) 96
    LONG (293) 97
    SIGNED (294) 100
    UNSIGNED (295) 101
    FLOAT (296) 98
    DOUBLE (297) 99
    CONST (298) 129
    VOLATILE (299) 130
    VOID (300) 93
    STRUCT (301) 108
    UNION (302) 109
    ENUM (303) 122 123 124
    ELLIPSIS (304) 143
    CASE (305) 176
    DEFAULT (306) 177
    IF (307) 188 189
    ELSE (308) 189
    SWITCH (309) 190
    WHILE (310) 191 192
    DO (311) 192
    FOR (312) 193 194
    GOTO (313) 195
    CONTINUE (314) 196
    BREAK (315) 197
    RETURN (316) 198 199


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    primary_expression <node> (87)
        on left: 1 2 3 4 5
        on right: 6
    postfix_expression <node> (88)
        on left: 6 7 8 9 10 11 12 13
        on right: 7 8 9 10 11 12 13 16
    argument_expression_list <node> (89)
        on left: 14 15
        on right: 9 15
    unary_expression <node> (90)
        on left: 16 17 18 19 20 21
        on right: 17 18 20 28 61
    unary_operator (91)
        on left: 22 23 24 25 26 27
        on right: 19
    cast_expression <node> (92)
        on left: 28 29
        on right: 19 29 30 31 32 33
    multiplicative_expression <node> (93)
        on left: 30 31 32 33
        on right: 31 32 33 34 35 36
    additive_expression <node> (94)
        on left: 34 35 36
        on right: 35 36 37 38 39
    shift_expression <node> (95)
        on left: 37 38 39
        on right: 38 39 40 41 42 43 44
    relational_expression <node> (96)
        on left: 40 41 42 43 44
        on right: 41 42 43 44 45 46 47
    equality_expression <node> (97)
        on left: 45 46 47
        on right: 46 47 48 49
    and_expression <node> (98)
        on left: 48 49
        on right: 49 50 51
    exclusive_or_expression <node> (99)
        on left: 50 51
        on right: 51 52 53
    inclusive_or_expression <node> (100)
        on left: 52 53
        on right: 53 54 55
    logical_and_expression <node> (101)
        on left: 54 55
        on right: 55 56 57
    logical_or_expression <node> (102)
        on left: 56 57
        on right: 57 58 59
    conditional_expression <node> (103)
        on left: 58 59
        on right: 59 60 75
    assignment_expression <node> (104)
        on left: 60 61
        on right: 14 15 61 73 74 164
    assignment_operator (105)
        on left: 62 63 64 65 66 67 68 69 70 71 72
        on right: 61
    expression <node> (106)
        on left: 73 74
        on right: 5 7 59 74 187 188 189 190 191 192 194 199
    constant_expression (107)
        on left: 75
        on right: 120 121 128 157 159 176
    declaration <node> (108)
        on left: 76 77
        on right: 182 183 203
    declaration_specifiers <node> (109)
        on left: 78 79 80 81 82 83
        on right: 76 77 79 81 83 147 148 149 204 205
    init_declarator_list <node> (110)
        on left: 84 85
        on right: 77 85
    init_declarator <node> (111)
        on left: 86 87
        on right: 84 85
    storage_class_specifier (112)
        on left: 88 89 90 91 92
        on right: 78 79
    type_specifier <node> (113)
        on left: 93 94 95 96 97 98 99 100 101 102 103 104
        on right: 80 81 113 114
    struct_or_union_specifier (114)
        on left: 105 106 107
        on right: 102
    struct_or_union (115)
        on left: 108 109
        on right: 105 106 107
    struct_declaration_list (116)
        on left: 110 111
        on right: 105 106 111
    struct_declaration (117)
        on left: 112
        on right: 110 111
    specifier_qualifier_list (118)
        on left: 113 114 115 116
        on right: 112 113 115 150 151
    struct_declarator_list (119)
        on left: 117 118
        on right: 112 118
    struct_declarator (120)
        on left: 119 120 121
        on right: 117 118
    enum_specifier (121)
        on left: 122 123 124
        on right: 103
    enumerator_list (122)
        on left: 125 126
        on right: 122 123 126
    enumerator (123)
        on left: 127 128
        on right: 125 126
    type_qualifier (124)
        on left: 129 130
        on right: 82 83 115 116 140 141
    declarator <node> (125)
        on left: 131
        on right: 86 87 119 121 133 147 204 205 206 207
    direct_declarator <node> (126)
        on left: 132 133 134 135
        on right: 131 134 135
    pointer (127)
        on left: 136 137 138 139
        on right: 138 139 152 154
    type_qualifier_list (128)
        on left: 140 141
        on right: 137 139 141
    parameter_type_list <node> (129)
        on left: 142 143
        on right: 135 161 163
    parameter_list <node> (130)
        on left: 144 145
        on right: 142 143 145
    parameter_declaration <node> (131)
        on left: 146 147 148 149
        on right: 144 145
    type_name (132)
        on left: 150 151
        on right: 21 29
    abstract_declarator <node> (133)
        on left: 152 153 154
        on right: 148 151 155
    direct_abstract_declarator <node> (134)
        on left: 155 156 157 158 159 160 161 162 163
        on right: 153 154 158 159 162 163
    initializer <node> (135)
        on left: 164 165 166
        on right: 87 167 168
    initializer_list (136)
        on left: 167 168
        on right: 165 166 168
    statement <node> (137)
        on left: 169 170 171 172 173 174
        on right: 175 176 177 184 185 188 189 190 191 192 193 194
    labeled_statement <node> (138)
        on left: 175 176 177
        on right: 169
    compound_statement <node> (139)
        on left: 178 179 180 181
        on right: 170 204 205 206 207
    declaration_list <node> (140)
        on left: 182 183
        on right: 180 181 183 204 206
    statement_list <node> (141)
        on left: 184 185
        on right: 179 181 185
    expression_statement <node> (142)
        on left: 186 187
        on right: 171 193 194
    selection_statement <node> (143)
        on left: 188 189 190
        on right: 172
    iteration_statement <node> (144)
        on left: 191 192 193 194
        on right: 173
    jump_statement <node> (145)
        on left: 195 196 197 198 199
        on right: 174
    translation_unit <node> (146)
        on left: 200 201
        on right: 201 208
    external_declaration <node> (147)
        on left: 202 203
        on right: 200 201
    function_definition <node> (148)
        on left: 204 205 206 207
        on right: 202
    program <node> (149)
        on left: 208
        on right: 0


State 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    declarator                 go to state 31
    direct_declarator          go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35
    program                    go to state 36


State 1

  132 direct_declarator: IDENTIFIER .

    $default  reduce using rule 132 (direct_declarator)


State 2

  104 type_specifier: TYPE_NAME .

    $default  reduce using rule 104 (type_specifier)


State 3

   88 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 88 (storage_class_specifier)


State 4

   89 storage_class_specifier: EXTERN .

    $default  reduce using rule 89 (storage_class_specifier)


State 5

   90 storage_class_specifier: STATIC .

    $default  reduce using rule 90 (storage_class_specifier)


State 6

   91 storage_class_specifier: AUTO .

    $default  reduce using rule 91 (storage_class_specifier)


State 7

   92 storage_class_specifier: REGISTER .

    $default  reduce using rule 92 (storage_class_specifier)


State 8

   94 type_specifier: CHAR .

    $default  reduce using rule 94 (type_specifier)


State 9

   95 type_specifier: SHORT .

    $default  reduce using rule 95 (type_specifier)


State 10

   96 type_specifier: INT .

    $default  reduce using rule 96 (type_specifier)


State 11

   97 type_specifier: LONG .

    $default  reduce using rule 97 (type_specifier)


State 12

  100 type_specifier: SIGNED .

    $default  reduce using rule 100 (type_specifier)


State 13

  101 type_specifier: UNSIGNED .

    $default  reduce using rule 101 (type_specifier)


State 14

   98 type_specifier: FLOAT .

    $default  reduce using rule 98 (type_specifier)


State 15

   99 type_specifier: DOUBLE .

    $default  reduce using rule 99 (type_specifier)


State 16

  129 type_qualifier: CONST .

    $default  reduce using rule 129 (type_qualifier)


State 17

  130 type_qualifier: VOLATILE .

    $default  reduce using rule 130 (type_qualifier)


State 18

   93 type_specifier: VOID .

    $default  reduce using rule 93 (type_specifier)


State 19

  108 struct_or_union: STRUCT .

    $default  reduce using rule 108 (struct_or_union)


State 20

  109 struct_or_union: UNION .

    $default  reduce using rule 109 (struct_or_union)


State 21

  122 enum_specifier: ENUM . '{' enumerator_list '}'
  123               | ENUM . IDENTIFIER '{' enumerator_list '}'
  124               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 37
    '{'         shift, and go to state 38


State 22

  133 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22

    declarator         go to state 39
    direct_declarator  go to state 32


State 23

  203 external_declaration: declaration .

    $default  reduce using rule 203 (external_declaration)


State 24
